# ovpn-convert

./: .gitignore  CMakeLists.txt  README.md
po/: CMakeLists.txt  messages.pot  ru.po
src/: main.c  ovpn-options.c  ovpn-options.h  ovpn-parse.c  ovpn.c  ovpn.h
